--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-<!--    todo: add maxSdk = 25-->
+<!--    todo: add maxSdk = 25 and use https://developer.android.com/guide/topics/connectivity/companion-device-pairing -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
