--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nick.template">
+    package="nick.chat">
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -12,14 +12,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name="nick.chat.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Template">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name="nick.chat.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
