--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,16 @@
         android:name="android.hardware.location"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:name="nick.chat.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Template">
-        <activity android:name="nick.chat.ui.MainActivity">
+        android:supportsRtl="true">
+        <activity
+            android:name="nick.chat.ui.MainActivity"
+            android:theme="@style/Theme.BleChat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
